[gd_scene load_steps=21 format=2]

[ext_resource path="res://ui/inventory/inventory.png" type="Texture" id=1]
[ext_resource path="res://ui/inventory/inventory_highlight.png" type="Texture" id=2]
[ext_resource path="res://ui/inventory/inventory.gd" type="Script" id=3]
[ext_resource path="res://ui/inventory/cook_bar.png" type="Texture" id=4]
[ext_resource path="res://ui/inventory/cooking_pot_fg.png" type="Texture" id=5]
[ext_resource path="res://hack.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://items/tomato_item.png" type="Texture" id=7]
[ext_resource path="res://ui/inventory/cook_button_highlight.png" type="Texture" id=8]
[ext_resource path="res://ui/inventory/cook_button.png" type="Texture" id=9]
[ext_resource path="res://ui/inventory/cook_result.png" type="Texture" id=10]
[ext_resource path="res://ui/inventory/ingredient_sprite.gd" type="Script" id=11]
[ext_resource path="res://ui/inventory/cooking_pot_bg.png" type="Texture" id=12]
[ext_resource path="res://ui/inventory/ingredient_sprite.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 120, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 360, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 120, 120 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="inventory" type="Control"]
margin_left = 80.0
margin_top = 30.0
margin_right = 120.0
margin_bottom = 70.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fade" type="ColorRect" parent="."]
margin_left = -80.0
margin_top = -30.0
margin_right = 400.0
margin_bottom = 240.0
color = Color( 0, 0, 0, 0.6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="ingredients_bar" type="Sprite" parent="."]
position = Vector2( 241, 20 )
texture = ExtResource( 4 )

[node name="pot_bg" type="Sprite" parent="."]
position = Vector2( 181, 99 )
texture = ExtResource( 12 )
centered = false

[node name="cook_button" type="Sprite" parent="."]
position = Vector2( 241, 65 )
texture = ExtResource( 9 )
hframes = 2

[node name="highlight" type="Sprite" parent="cook_button"]
texture = ExtResource( 8 )
hframes = 2

[node name="cook_result" type="Sprite" parent="."]
position = Vector2( 241, 68 )
texture = ExtResource( 10 )

[node name="highlight" type="Sprite" parent="cook_result"]
texture = ExtResource( 2 )
hframes = 2

[node name="cursor" type="Sprite" parent="."]
position = Vector2( 3, 3 )
texture = ExtResource( 2 )
centered = false
hframes = 2

[node name="row_1" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_1" type="Sprite" parent="row_1"]
position = Vector2( 4, 4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false
hframes = 8

[node name="label" type="Label" parent="row_1/item_1"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_2" type="Sprite" parent="row_1"]
position = Vector2( 40, 4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false
hframes = 8

[node name="label" type="Label" parent="row_1/item_2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="row_2" type="Control" parent="."]
margin_top = 36.0
margin_right = 40.0
margin_bottom = 76.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_1" type="Sprite" parent="row_2"]
position = Vector2( 4, 4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false
hframes = 8

[node name="label" type="Label" parent="row_2/item_1"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_2" type="Sprite" parent="row_2"]
position = Vector2( 40, 4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false
hframes = 8

[node name="label" type="Label" parent="row_2/item_2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="row_3" type="Control" parent="."]
margin_top = 72.0
margin_right = 40.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_1" type="Sprite" parent="row_3"]
position = Vector2( 4, 4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false
hframes = 8

[node name="label" type="Label" parent="row_3/item_1"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_2" type="Sprite" parent="row_3"]
position = Vector2( 40, 4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false
hframes = 8

[node name="label" type="Label" parent="row_3/item_2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="row_4" type="Control" parent="."]
margin_top = 108.0
margin_right = 40.0
margin_bottom = 148.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_1" type="Sprite" parent="row_4"]
position = Vector2( 4, 4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false
hframes = 8

[node name="label" type="Label" parent="row_4/item_1"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_2" type="Sprite" parent="row_4"]
position = Vector2( 40, 4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false
hframes = 8

[node name="label" type="Label" parent="row_4/item_2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="row_5" type="Control" parent="."]
margin_top = 144.0
margin_right = 40.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_1" type="Sprite" parent="row_5"]
position = Vector2( 4, 4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false
hframes = 8

[node name="label" type="Label" parent="row_5/item_1"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_2" type="Sprite" parent="row_5"]
position = Vector2( 40, 4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false
hframes = 8

[node name="label" type="Label" parent="row_5/item_2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="row_6" type="Control" parent="."]
margin_top = 180.0
margin_right = 40.0
margin_bottom = 220.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_1" type="Sprite" parent="row_6"]
position = Vector2( 4, 4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false
hframes = 8

[node name="label" type="Label" parent="row_6/item_1"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_2" type="Sprite" parent="row_6"]
position = Vector2( 40, 4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false
hframes = 8

[node name="label" type="Label" parent="row_6/item_2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ingredients" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ingredient_1" type="Sprite" parent="ingredients"]
position = Vector2( 205, 20 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
hframes = 8
script = ExtResource( 11 )
FALLING_POS = Vector2( 257, 114 )
rotation_speed = 150

[node name="ingredient_2" type="Sprite" parent="ingredients"]
position = Vector2( 241, 20 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
hframes = 8
script = ExtResource( 13 )
RISING_POS = Vector2( 225, -36 )
FALLING_POS = Vector2( 225, 114 )
rotation_speed = -90

[node name="ingredient_3" type="Sprite" parent="ingredients"]
position = Vector2( 277, 20 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
hframes = 8
script = ExtResource( 13 )
RISING_POS = Vector2( 225, -36 )
FALLING_POS = Vector2( 209, 114 )
rotation_speed = -150

[node name="pot" type="AnimatedSprite" parent="."]
position = Vector2( 241, 159 )
z_index = 2
frames = SubResource( 10 )
frame = 2
playing = true

[node name="timer" type="Timer" parent="."]

[node name="tween" type="Tween" parent="."]
